--- a/index.html
+++ b/index.html
@@ -3,10 +3,27 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style/style.css">
     <title>Sachin Kn</title>
+
+    <meta name="msapplication-TileImage" content="image_url">
+
+    <meta property="og:site_name" content="profile.sachinkn.in">
+    <meta property="og:title" content="Sachin Kn">
+    <meta property="og:description" content="Sachin Kn's Profile">
+
+    <meta property="og:image" itemprop="image"
+        content="https://raw.githubusercontent.com/eternalGatherings/weddings/main/Dharmendra%E2%9D%A4Anushree/bgfrdszxfcfglmknjma/preview.jpeg">
+
+    <meta property="og:type" content="website">
+    <meta property="og:image:type" content="image/png">
+
+    <meta property="og:image:width" content="300">
+    <meta property="og:image:height" content="300">
+
+    <meta property="og:url" content="https://profile.sachinkn.in/">
+    
+    <link rel="stylesheet" href="assets/style/style.css">
 </head>
 
 <body>
